<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Sensors</string>
    <string name="lat">Lat</string>
    <string name="lon">Lon</string>
    <string name="accuracy">Accuracy</string>
    <string name="bearing">Bearing</string>
    <string name="speed">Speed</string>
    <string name="altitude">Altitude</string>
    <string name="time">Time</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="about">About</string>
    <string name="vendor">Vendor</string>
    <string name="version">Version</string>
    <string name="timestamp">Timestamp</string>
    <string name="sensor_name">Name</string>
    <string name="sensor_power">Power</string>
    <string name="sensor_resolution">Resolution</string>
    <string name="sensor_min_delay">Min Delay</string>
    <string name="sensor_type">Type</string>
    <string name="sensor_x">Sensor X</string>
    <string name="sensor_y">Sensor Y</string>
    <string name="sensor_z">Sensor Z</string>
    <string name="accelerometer_caps">ACCELEROMETER</string>
    <string name="magnetic_field_caps">MAGNETIC FIELD</string>
    <string name="orientation_caps">ORIENTATION</string>

</resources>